Add information assets feature with routing, controller, and templates

--- a/app/components/process-bar.hbs
+++ b/app/components/process-bar.hbs
@@ -27,6 +27,11 @@
           Inventaris processen
         </AuLink>
       </Tab>
+      <Tab>
+        <AuLink @route="information-assets.index" @icon="folder">
+          Informatie assets
+        </AuLink>
+      </Tab>
     </AuTabs>
   </Group>
   <Group>
