--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -5,22 +5,25 @@
 {{! template-lint-disable no-inline-styles }}
 <SidebarContainer>
   <:sidebar>
-    <div class="au-c-sidebar au-o-box" style="min-width: 25vw">
+    <div class="au-c-sidebar" style="min-width: 20vw">
       <div>
-        <AuHeading @skin="5" class="au-u-muted au-u-margin-bottom-small">
+        <AuHeading
+          @skin="5"
+          class="au-u-muted au-u-margin-bottom-small au-u-padding-left au-u-padding-top"
+        >
           Versies
         </AuHeading>
-        <div class="au-o-flow--tiny">
+        <div class="">
           {{#each @model.lists as |diagramList|}}
             <div
               {{on "click" (fn this.openDiagramList diagramList)}}
-              class="au-u-flex au-u-flex--column au-u-padding au-u-padding-top-small au-u-padding-bottom-small"
+              class="au-u-flex au-u-flex--column au-u-padding au-u-padding-top-small au-u-padding-bottom"
               style="
                {{if
                 (eq this.selectedDiagramList.id diagramList.id)
                 'background-color: var(--au-select-text-bg);'
                 'background-color: var(--au-white);'
-              }} border-radius:5px;border:1.5px solid var(--au-gray-200); box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px; "
+              }} border:1.5px solid var(--au-gray-200); "
             >
               <div class="au-u-flex au-u-flex--column au-u-flex--between">
                 <p class="au-u-h5">{{date-format diagramList.created true}}</p>
@@ -33,12 +36,19 @@
     </div>
   </:sidebar>
   <:content>
-    <div class="au-o-box au-o-flow">
+    <AuToolbar @size="small" class="au-u-padding-top" as |Group|>
+      <Group />
+      <Group class="au-c-toolbar__group--actions">
+        <AuPill @icon="clock-rewind">Laatst aangepast op
+          {{date-format this.selectedDiagramList.modified true}}</AuPill>
+      </Group>
+    </AuToolbar>
+    <div class="au-o-box">
       {{#if this.selectedDiagramFile}}
         <File::Viewer @file={{this.selectedDiagramFile}} />
         <File::MetadataCard @file={{this.selectedDiagramFile}} />
       {{/if}}
-      <p class="au-u-h4 au-u-medium">Diagrammen</p>
+      <p class="au-u-h4 au-u-medium au-u-margin-top">Diagrammen</p>
       <DiagramList::Table
         @diagramList={{this.selectedDiagramList}}
         @onDiagramFileSelected={{this.openDiagramFile}}
