feat: show a lock on older versions and you can only edit the current one
Refs: oph-861

--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -29,6 +29,16 @@
                 <p class="au-u-h5">{{date-format diagramList.created true}}</p>
                 <p class="au-u-muted">{{diagramList.displayVersion}}</p>
               </div>
+              {{#unless (eq diagramList.id @model.activeDiagramList.id)}}
+                <div class="au-u-flex au-u-flex--end">
+                  <AuIcon
+                    @icon="lock-closed"
+                    @size={{this.size}}
+                    @alignment={{this.alignment}}
+                    @ariaHidden={{this.ariaHidden}}
+                  />
+                </div>
+              {{/unless}}
             </div>
           {{/each}}
         </div>
@@ -52,7 +62,7 @@
       <DiagramList::Table
         @diagramList={{this.selectedDiagramList}}
         @onDiagramFileSelected={{this.openDiagramFile}}
-        @canEdit={{this.canEdit}}
+        @canEdit={{this.canEditFilesInTable}}
       />
     </div>
   </:content>
