--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -9,21 +9,10 @@
   >
     <row.content class="au-c-data-table__table--small" as |c|>
       <c.header>
-        <AuDataTableThSortable
-          @field="name"
-          @currentSorting={{this.sort}}
-          @label="Bestandsnaam"
-        />
-        <AuDataTableThSortable
-          @field="created"
-          @currentSorting={{this.sort}}
-          @label="Toegevoegd op"
-        />
-        <AuDataTableThSortable
-          @field="size"
-          @currentSorting={{this.sort}}
-          @label="Grootte"
-        />
+        <th>Bestandsnaam</th>
+        <th>Toegevoegd</th>
+        <th>Grootte</th>
+        <th>Positie</th>
         <th></th>
         {{#if @canEdit}}<th></th>{{/if}}
       </c.header>
@@ -45,6 +34,7 @@
           </td>
           <td>{{date-format diagram.diagramFile.created true}}</td>
           <td>{{file-size-format diagram.diagramFile.size}}</td>
+          <td>{{diagram.position}}</td>
           <td>
             <AuButton
               @icon="download"
