feat: Refactor ICR card and modal components for improved asset management
- Simplified the rendering of scores in the ICR card by removing unnecessary conditional checks.
- Updated the asset editing functionality to transition directly to the edit route.
- Enhanced the score component to handle hover states and clicks more effectively.
- Modified the ICR modal to utilize mut helpers for score changes and checkbox states.
- Introduced a delete modal component for confirming asset deletions.
- Implemented a new controller for editing information assets, including validation and save logic.
- Added functionality to create new information assets and manage their state.
- Updated the information assets index and edit templates for better user experience and data handling.
- Improved the information asset model to include archiving logic and default values for attributes.
- Adjusted routing to support new edit and index routes for information assets.
- Enhanced styles for better visual feedback on user interactions.

--- a/app/components/data-card.hbs
+++ b/app/components/data-card.hbs
@@ -8,22 +8,23 @@
           <div class="au-u-flex au-u-flex--vertical-center">
             <button
               type="button"
-              class="au-u-flex au-u-flex--spaced-tiny"
+              class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center"
               {{on "click" this.toggleCollapse}}
             >
               <AuIcon
                 @icon={{if this.isCollapsed "chevron-up" "chevron-down"}}
                 @size="large"
               />
+
+              {{#if (has-block "title")}}
+                <AuHeading
+                  @level={{or @headingLevel "3"}}
+                  @skin={{or @headingSkin "4"}}
+                >
+                  {{yield to="title"}}
+                </AuHeading>
+              {{/if}}
             </button>
-            {{#if (has-block "title")}}
-              <AuHeading
-                @level={{or @headingLevel "3"}}
-                @skin={{or @headingSkin "4"}}
-              >
-                {{yield to="title"}}
-              </AuHeading>
-            {{/if}}
           </div>
           {{#unless this.isCollapsed}}
             <div>
@@ -33,14 +34,20 @@
         </div>
       </div>
       {{#unless this.isCollapsed}}
-        <div class="au-u-flex">
-          <div class="card-helptext"></div>
-          {{! width of the chevron button }}
-          <div class="au-u-flex-grow-1 au-u-margin-bottom-small">
-            {{yield to="subheader"}}
+        {{#if (or (has-block "helpText") (has-block "subheader"))}}
+          <div class="au-u-flex">
+            {{#if (has-block "helpText")}}
+              <div class="helpText">{{yield to="helpText"}}</div>
+            {{/if}}
+            {{! width of the chevron button }}
+            {{#if (has-block "subheader")}}
+              <div class="au-u-flex-grow-1 au-u-margin-bottom-small">
+                {{yield to="subheader"}}
+              </div>
+            {{/if}}
           </div>
-        </div>
-        <AuHr @size="default" />
+        {{/if}}
+        <AuHr @size="default" class="au-u-margin-top-tiny" />
       {{/unless}}
 
     </div>
