--- a/app/components/process/icr-modal.hbs
+++ b/app/components/process/icr-modal.hbs
@@ -36,7 +36,7 @@
               >Beschikbaarheid</label>
               <Process::IcrCard::Score
                 @selectedScore={{@selected.availabilityScore}}
-                @onScoreChange={{this.setAvailabilityScore}}
+                @onScoreChange={{fn (mut @selected.availabilityScore)}}
               />
             </div>
             <div class="au-u-1-1">
@@ -45,7 +45,7 @@
               >Integriteit</label>
               <Process::IcrCard::Score
                 @selectedScore={{@selected.integrityScore}}
-                @onScoreChange={{this.setIntegrityScore}}
+                @onScoreChange={{fn (mut @selected.integrityScore)}}
               />
             </div>
             <div class="au-u-1-1">
@@ -54,7 +54,7 @@
               >Vertrouwelijkheid</label>
               <Process::IcrCard::Score
                 @selectedScore={{@selected.confidentialityScore}}
-                @onScoreChange={{this.setConfidentialityScore}}
+                @onScoreChange={{fn (mut @selected.confidentialityScore)}}
               />
             </div>
           </div>
@@ -68,8 +68,8 @@
       <div class="au-u-flex au-u-flex--column au-u-flex--spaced-small">
         <AuCheckbox
           id="contains-personal-data"
-          @checked={{@selected.containsPersonalData}}
-          @onChange={{this.setContainsPersonalData}}
+          @checked={{@selected.containsProfessionalData}}
+          @onChange={{fn (mut @selected.containsProfessionalData)}}
         >
           <label for="contains-personal-data">Professionele gegevens</label>
           <Shared::Tooltip
@@ -87,8 +87,8 @@
         </AuCheckbox>
         <AuCheckbox
           id="contains-professional-data"
-          @checked={{@selected.containsProfessionalData}}
-          @onChange={{this.setContainsProfessionalData}}
+          @checked={{@selected.containsPersonalData}}
+          @onChange={{fn (mut @selected.containsPersonalData)}}
         >
           <label for="contains-professional-data">Persoonsgegevens</label>
 
@@ -107,7 +107,7 @@
         <AuCheckbox
           id="contains-sensitive-personal-data"
           @checked={{@selected.containsSensitivePersonalData}}
-          @onChange={{this.setContainsSensitivePersonalData}}
+          @onChange={{fn (mut @selected.containsSensitivePersonalData)}}
         >
           <label for="contains-sensitive-personal-data">Bijzondere
             persoonsgegevens</label>
