fix: correct model reference in breadcrumb for process templates

--- a/app/templates/processes/process.hbs
+++ b/app/templates/processes/process.hbs
@@ -1,3 +1,3 @@
 {{page-title this.model.title}}
-{{breadcrumb this.model.title route="processes.process" models=this.model.id}}
+{{breadcrumb this.model.title route="processes.process" model=this.model.id}}
 {{outlet}}
