--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -1,8 +1,9 @@
 {{page-title "Diagrammen"}}
-
+{{breadcrumb "Diagram" route="processes.process.diagrams" model=@model.id}}
 {{! template-lint-disable no-invalid-interactive }}
 {{! template-lint-disable style-concatenation }}
 {{! template-lint-disable no-inline-styles }}
+
 <SidebarContainer>
   <:sidebar>
     <div class="au-c-sidebar" style="min-width: 20vw">
