--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -6,7 +6,7 @@
 
 <SidebarContainer>
   <:sidebar>
-    <div class="au-c-sidebar" style="min-width: 20vw">
+    <div class="au-c-sidebar">
       <div>
         <AuHeading
           @skin="5"
