feat: the file viewer component support on bpmnloaded and svg loaded + use it in visual component
Refs: oph-861

--- a/app/components/file/viewer.hbs
+++ b/app/components/file/viewer.hbs
@@ -1,6 +1,10 @@
 {{#if @file}}
   {{#if @file.isBpmnFile}}
-    <BpmnViewer @diagram={{@file}} />
+    <BpmnViewer
+      @diagram={{@file}}
+      @onBpmnLoaded={{@onBpmnLoaded}}
+      @onSvgLoaded={{@onSvgLoaded}}
+    />
   {{else if @file.isVisioFile}}
     <PdfViewer @diagram={{@file}} />
   {{/if}}
