fix: only let sidebar css class scroll on y-axis
Refs: oph-861

--- a/app/styles/components/_sidebar-container.scss
+++ b/app/styles/components/_sidebar-container.scss
@@ -79,5 +79,5 @@ Tracking issue: https://github.com/appuniversum/ember-appuniversum/issues/86 */
 }
 
 .au-c-sidebar {
-  overflow: scroll;
+  overflow-y: scroll;
 }
