--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -64,6 +64,7 @@
         @diagramList={{this.selectedDiagramList}}
         @onDiagramFileSelected={{this.openDiagramFile}}
         @canEdit={{this.canEditFilesInTable}}
+        @canDeleteLastItem={{false}}
       />
     </div>
   </:content>
